--- a/index.html
+++ b/index.html
@@ -102,6 +102,41 @@
         <p>Outfit Of The Day.</p>
       </div>
 
+<div class="video-card">
+        <video src="videos/video15.mp4" controls></video>
+        <h3> Doing Your Admission Process To Run❤️</h3>
+        <p>Look Great.</p>
+      </div>
+
+      <div class="video-card">
+        <video src="videos/video16.mp4" controls></video>
+        <h3>New Hair❤️</h3>
+        <p>Look Beautiful In It😍 .</p>
+      </div>
+
+      <div class="video-card">
+        <video src="videos/video17.mp4" controls></video>
+        <h3> Watching Anime❤️</h3>
+        <p>I Wished I Was Watching It With You.</p>
+      </div>
+
+      <div class="video-card">
+        <video src="videos/video18.mp4" controls></video>
+        <h3> Stuffed❤️</h3>
+        <p>U Felt Filled Up.</p>
+      </div>
+
+      <div class="video-card">
+        <video src="videos/video19.mp4" controls></video>
+        <h3> Look Georgeous Without Makeup And The Lipcombo❤️</h3>
+        <p>Outfit Of The Day.</p>
+      </div>
+
+      <div class="video-card">
+        <video src="videos/video20.mp4" controls></video>
+        <h3> Still Want Those Lips❤️</h3>
+        <p>Feel Like Kissing It.</p>
+      </div>
     </div>
   </main>
 
